# app/server.js
@@ -3,12 +3,11 @@ const bodyParser = require("body-parser");
 const jwt = require("jsonwebtoken");
 const swaggerUi = require("swagger-ui-express");
 const YAML = require("yamljs");
-const swaggerDocument = YAML.load("./swagger.yaml"); // Replace './swagger.yaml' with the path to your Swagger file
+const swaggerDocument = YAML.load("./swagger.yaml");
 const app = express();
 
 app.use(bodyParser.json());
 
-// Importing the data from JSON files
 const users = require("../initial-data/users.json");
 const brands = require("../initial-data/brands.json");
 const products = require("../initial-data/products.json");
@@ -27,13 +26,22 @@ const authenticate = (req, res, next) => {
   }
 };
 
-// Get /api/brands
+app.get("/api/glassesSearch", (req, res) => {
+  const glasses = req.query.name;
+
+  const glassName = products.find((item) => item.name === glasses);
+
+  if (!glassName) {
+    return res.status(404).json({ message: "Glasses not found!" });
+  }
+
+  res.status(200).json(glassName);
+});
 
 app.get("/api/brands", (req, res) => {
   res.status(200).json(brands);
 });
 
-//Get list of products based on ID
 app.get("/api/brands/:id/products", (req, res) => {
   const id = req.params.id;
 
@@ -42,7 +50,6 @@ app.get("/api/brands/:id/products", (req, res) => {
   });
 });
 
-//Login
 app.post("/api/login", (req, res) => {
   const { username, password } = req.body;
 
@@ -68,7 +75,6 @@ app.post("/api/login", (req, res) => {
   });
 });
 
-//Add to the cart
 app.post("/api/addToCart", authenticate, (req, res) => {
   const { productId, quantity } = req.body;
 
@@ -88,7 +94,6 @@ app.post("/api/addToCart", authenticate, (req, res) => {
   res.status(200).json(cart);
 });
 
-//Update Quantity in Cart
 app.put("/api/cart/productQuantity/:id", authenticate, (req, res) => {
   const id = req.params.id;
   const quantity = req.body.quantity;
@@ -106,12 +111,10 @@ app.put("/api/cart/productQuantity/:id", authenticate, (req, res) => {
   res.status(200).json(cart);
 });
 
-//Retrieve the cart
 app.get("/api/mycart", authenticate, (req, res) => {
   res.status(200).json(cart);
 });
 
-//Delete an item from the cart
 app.delete("/api/cart/delete/:id", authenticate, (req, res) => {
   const id = req.params.id;
 
@@ -128,7 +131,6 @@ app.delete("/api/cart/delete/:id", authenticate, (req, res) => {
   res.status(200).json(cart);
 });
 
-//Subscribe
 app.post("/api/subscribe", (req, res) => {
   const newEmail = req.body.email;
 
@@ -137,16 +139,13 @@ app.post("/api/subscribe", (req, res) => {
   res.status(200).json(subscribedEmails);
 });
 
-// Error handling
 app.use((err, req, res, next) => {
   console.error(err.stack);
   res.status(500).send("Something broke!");
 });
 
-// Swagger
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// Starting the server
 const PORT = process.env.PORT || 3000;
 app.listen(PORT, () => {
   console.log(`Server running on port ${PORT}`);
